# ocaml-rust-stubs

./: .gitignore  Makefile  README.md  rust-stubs.opam
examples/parquet/: Cargo.toml
examples/parquet/src/: data_type.ml  data_type.mli  dune  f.ml  f.mli  field_.ml  field_.mli  helpers.rs  lib.rs  parquet_rs.ml  reader.ml  reader.mli  rs_parquet.ml  rs_parquet.rs
examples/parquet/test/: dune  test.ml
src/: dune  stubs_fn.ml  stubs_fn.mli  stubs_gen.ml  stubs_gen.mli
