[package]
name = "parquet-ocaml"
version = "0.1.0"
authors = ["laurent <laurent.mazare@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "1.0.0"
parquet = "1.0.0"
ocaml = { git = "https://github.com/zshipko/ocaml-rs.git" }
