[package]
name = "parquet-ocaml"
version = "0.1.0"
authors = ["laurent <laurent.mazare@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "3.0.0"
parquet = "3.0.0"
ocaml = "0.20.1"
