(rule
 (targets libparquet_ocaml.a libparquet_ocaml.so)
 (deps (glob_files *.rs) ../Cargo.toml)
 (action
  (progn
   (run cargo +nightly build --release --target-dir %{project_root}/examples/parquet/target)
   (run cp %{project_root}/examples/parquet/target/debug/libparquet_ocaml.so ./libparquet_ocaml.so)
   (run cp %{project_root}/examples/parquet/target/debug/libparquet_ocaml.a libparquet_ocaml.a))))

(library
 (name parquet_rs)
 (libraries base stdio)
 (foreign_archives parquet_ocaml)
 (c_library_flags (-lc -lm)))
